    skill to 14 and their Evocations skill to 0.
  - The Slick Slippers, which make all damaging melee attacks trample their
    wearer backward. They provide immunity to constriction, engulfing, etc.
  - The Force Lance, a Heavy +5 lance (ala Wyrmbane) which has a 1/3 chance of
    knocking back foes when landing a damaging blow.
* Unrand changes:
  - The Mad Mage's Maulers lose Int-3 and RegenMP, gain -Cast and MPVamp (gain
    MP from damage dealt), and deal twice as much damage when spending MP.
  - The Ring of the Hare is now +10 (was +8).
  - Majin-Bo is now one-handed.
  - Sniper is now +27 and Heavy (was +9 and Vorpal).
  - The Dark Maul is now Heavy (was Vorpal), and has its base stats adjusted.
  - Other formerly Vorpal unrands have been adjusted individually.
  - The Lochaber Axe now causes HP Drain on unequip.
* Scrolls of butterflies now create dramatically more butterflies. They now
  alternate with scrolls of summoning instead of scrolls of fog.
* Rings of evasion are now +5 (were +4).
* All ranged weapons can now generate with electrocution, antimagic, and
  draining brands. Venom ranged weapons no longer appear.
* Short sword attack delay reduced.
* Evocable invisibilty and blink no longer have an MP cost.
* Spells have been reshuffled between books, and a new Maxwell's Memoranda book
  has been added.
* Hand crossbows are slightly weaker and slower.
* Removed the 'vorpal' brand.

Monsters
--------
* Demonic Crawlers lose the Warning Cry ability and elemental resistances in
  exchange for higher damage and very fast regeneration.
* Doom Hounds' Howl is now resistable by Will.
* Many monsters do somewhat less damage.
* Walking Tomes are now unable to cast while silenced.
* Ironbound Frosthearts' Creeping Frost spell is now fully resistable by rC.
* Fleeing monsters will no longer avoid harmful clouds.

Spells
------
* New spells:
  - Kiss of Death (L1 Conj/Necro): does high draining damage to an adjacent